# quantum_pangenomics

./: .gitignore  .gitmodules  README.md  dwave.compiled.txt  gurobi.compiled.txt  install.sh  mqlib.compiled.txt  pangenome-spec-file.txt  pip_freeze.txt  qokit-spec-file.txt  qokit_requirements.txt  requirements.txt  settings.json
legacy_code/pytket_simulation/: pyproject.toml
new_qubo_formulation/: README.md  pyproject.toml
prog_qaoa/: prog_qaoa_test.ipynb  pyproject.toml
prog_qaoa/notebooks/: oriented_full_circ.ipynb  oriented_prog_qaoa.ipynb  plot_prog.ipynb  prog_qaoa_low_width.ipynb  prog_qaoa_test.ipynb  prog_testing.ipynb
prog_qaoa/qiskit_prog_qaoa/: optimize_oriented_prog_qaoa.py  optimize_prog_qaoa.py  parameter_transfer_oriented_from_saved.py  parameter_transfer_oriented_prog_qaoa.py  plot_oriented_prog_qaoa.py  plot_parameter_transfer_oriented_prog_qaoa.py  plot_prog_qaoa.py  profile_prog_qaoa.py  test_from_data.py  test_oriented_from_prepared.py  test_oriented_prog_qaoa.py  test_prog_qaoa_circuits.py
qiskit_simulation/: README.md  notes.txt  pyproject.toml
qiskit_simulation/notebooks/: commuting_rzz_plot.ipynb  extract_history.ipynb  get_circuit_depths.ipynb  get_hamiltonian.ipynb  grover_mixer.ipynb  hex_swap.ipynb  hex_swap_results.ipynb  higher_order_sat_mapping.ipynb  hubo.ipynb  hubo_no_shot_noise.ipynb  layout_testing.ipynb  mixer.ipynb  multi_layer.ipynb  multi_rz_decomposition.ipynb  optimisation.ipynb  optimise_no_shot_noise.ipynb  optimize.ipynb  output0.out  output0.var  output0.wat  output2.out  output2.var  output2.wat  per_layer_results.test_N2_W2.reps2.pkl  per_layer_results.test_N3_W4.reps3.pkl  per_layer_results.test_N7_W5.reps4.pkl  per_layer_results.trivial.reps3.pkl  plot_circuit_depths.ipynb  plot_hubo_dist_ionq.ipynb  plot_qaoa_depth_width.ipynb  plot_qubo_dist.ipynb  qaoa_testing.ipynb  sat_testing.ipynb  test_commuting_gate_router_rzz.ipynb  test_commuting_precompute.ipynb  test_hex_swap.ipynb  test_hubo_hamiltonian.ipynb  test_hubo_per_layer.ipynb  test_hubo_sat_mapping.ipynb  (+6 more)
(+456 files in other folders)
