[project]
name = "qiskit_prog_qaoa"
version = "0.1.0"
description = "QPG Qiskit Prog QAOA for Tangle Resolution"
dependencies = [
  "qiskit",
  "qiskit-optimization[cplex]",
  "qiskit-ibm-runtime",
  "scipy",
  "scikit-optimize",
  "matplotlib",
  "gfapy",
  "networkx",
  # "qiskit-aer-gpu",
  # qopt best practices
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
